--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "Ankit",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "express-fileupload": "^1.5.2",
     "groq-sdk": "^0.37.0",
     "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.5",
     "nodemon": "^3.1.11",
     "validator": "^13.15.26"
   }
